[gd_scene load_steps=19 format=3 uid="uid://xcjrjq5cbn7y"]

[ext_resource type="Script" path="res://player.gd" id="1_2v3wm"]
[ext_resource type="PackedScene" uid="uid://cf1dcxwv6bvl3" path="res://models/Pistol.glb" id="2_4esil"]
[ext_resource type="PackedScene" uid="uid://co581k85dp0wk" path="res://models/Low Poly Weapons Pack-glb/Assault Rifle-MdbcTe6hH3.glb" id="2_7pmfg"]
[ext_resource type="Script" path="res://addons/freecam_3D/freecam.gd" id="2_mpto1"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="3_27dhu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_67y6s"]

[sub_resource type="Gradient" id="Gradient_cfnn0"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_is51c"]
gradient = SubResource("Gradient_cfnn0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uu53b"]
gravity = Vector3(0, 0, 0)
angle_min = 45.0
angle_max = 45.0
color_ramp = SubResource("GradientTexture1D_is51c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4smqo"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("3_27dhu")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_b2g4i"]
material = SubResource("StandardMaterial3D_4smqo")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xk8km"]

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Assault_Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284894, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Assault_Rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Assault_Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.455732, -0.215424, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.55565, -0.198737, -0.5)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Assault_Rifle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.185618, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Assault_Rifle:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.454152, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne"),
"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hn37q"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/sync = true

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_2v3wm")

[node name="PlayerCol" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_67y6s")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_67y6s")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51306, 0)
script = ExtResource("2_mpto1")

[node name="Pistol" parent="Camera3D" instance=ExtResource("2_4esil")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)
visible = false

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.082921, 0.175637, -2.56014)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_uu53b")
draw_pass_1 = SubResource("PlaneMesh_b2g4i")

[node name="Assault_Rifle" parent="Camera3D" instance=ExtResource("2_7pmfg")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.417079, -0.266684, -0.832704)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Assault_Rifle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0715699, -2.35054)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_uu53b")
draw_pass_1 = SubResource("PlaneMesh_b2g4i")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="PlayerMesh" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.51306, 0)
mesh = SubResource("CapsuleMesh_xk8km")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
playback_default_blend_time = 0.05
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hn37q")

[node name="Label" type="Label" parent="."]
offset_right = 196.0
offset_bottom = 93.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
